@@ -132,10 +132,9 @@ boost::shared_ptr<YieldTermStructure> buildTermStructure(SEXP params, SEXP tsQuo
             flatQuotes = false;
         }
         
-        Calendar calendar = TARGET();
-        RQLContext::instance().calendar = calendar;
-        Integer fixingDays = 2;
-        RQLContext::instance().fixingDays = fixingDays;
+        // initialise from the singleton instance
+        Calendar calendar = RQLContext::instance().calendar;
+        //Integer fixingDays = RQLContext::instance().fixingDays;
 
         // Any DayCounter would be fine;  ActualActual::ISDA ensures that 30 years is 30.0
         DayCounter termStructureDayCounter = ActualActual(ActualActual::ISDA);
